New Activity for local db

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,4 +100,10 @@
         android:layout_height="wrap_content"
         android:text="To RecyclerView"/>
 
+    <Button
+        android:id="@+id/btn_local"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:text="To Local Host"/>
 </LinearLayout>
