--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,4 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_puguh"/>
-</LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pg_local"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_local"
+        app:layout_constraintEnd_toEndOf="@+id/rv_local"
+        app:layout_constraintStart_toStartOf="@+id/rv_local"
+        app:layout_constraintTop_toTopOf="@+id/rv_local" />
+</androidx.constraintlayout.widget.ConstraintLayout>
